ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'DATABASE'", "'USE'", "'TABLE'", 
                     "'DROP'", "'SELECT'", "'INSERT'", "'UPDATE'", "'DELETE'", 
                     "'INTO'", "'VALUES'", "'FROM'", "'WHERE'", "'SET'", 
                     "'PRIMARY'", "'KEY'", "'NOT'", "'NULL'", "'UNIQUE'", 
                     "'INT'", "'INTEGER'", "'BIGINT'", "'SMALLINT'", "'FLOAT'", 
                     "'DOUBLE'", "'DECIMAL'", "'NUMERIC'", "'CHAR'", "'VARCHAR'", 
                     "'TEXT'", "'DATE'", "'TIME'", "'DATETIME'", "'TIMESTAMP'", 
                     "'BOOLEAN'", "'BIT'", "'*'", "'='", "'<'", "'>'", "'<='", 
                     "'>='", "<INVALID>", "'('", "')'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "DATABASE", "USE", "TABLE", 
                      "DROP", "SELECT", "INSERT", "UPDATE", "DELETE", "INTO", 
                      "VALUES", "FROM", "WHERE", "SET", "PRIMARY", "KEY", 
                      "NOT", "NULL", "UNIQUE", "INT", "INTEGER", "BIGINT", 
                      "SMALLINT", "FLOAT", "DOUBLE", "DECIMAL", "NUMERIC", 
                      "CHAR", "VARCHAR", "TEXT", "DATE", "TIME", "DATETIME", 
                      "TIMESTAMP", "BOOLEAN", "BIT", "MULT", "IGUAL", "MENOR", 
                      "MAYOR", "MENORIGUAL", "MAYORIGUAL", "DIFERENTE", 
                      "PARIZQ", "PARDER", "COMA", "PUNTOYCOMA", "DECIMAL_NUM", 
                      "ENTERO", "CADENA", "ID", "COMENTARIO", "COMENTARIO_BLOQUE", 
                      "WS", "ERROR" ]

    RULE_inicio = 0
    RULE_sentencia = 1
    RULE_crearBaseDatos = 2
    RULE_usarBaseDatos = 3
    RULE_eliminarTabla = 4
    RULE_crearTabla = 5
    RULE_columna = 6
    RULE_tipoDato = 7
    RULE_restricciones = 8
    RULE_insertar = 9
    RULE_listaColumnas = 10
    RULE_listaValores = 11
    RULE_seleccionar = 12
    RULE_columnas = 13
    RULE_actualizar = 14
    RULE_asignacion = 15
    RULE_eliminar = 16
    RULE_condicion = 17
    RULE_operador = 18
    RULE_valor = 19

    ruleNames =  [ "inicio", "sentencia", "crearBaseDatos", "usarBaseDatos", 
                   "eliminarTabla", "crearTabla", "columna", "tipoDato", 
                   "restricciones", "insertar", "listaColumnas", "listaValores", 
                   "seleccionar", "columnas", "actualizar", "asignacion", 
                   "eliminar", "condicion", "operador", "valor" ]

    EOF = Token.EOF
    CREATE=1
    DATABASE=2
    USE=3
    TABLE=4
    DROP=5
    SELECT=6
    INSERT=7
    UPDATE=8
    DELETE=9
    INTO=10
    VALUES=11
    FROM=12
    WHERE=13
    SET=14
    PRIMARY=15
    KEY=16
    NOT=17
    NULL=18
    UNIQUE=19
    INT=20
    INTEGER=21
    BIGINT=22
    SMALLINT=23
    FLOAT=24
    DOUBLE=25
    DECIMAL=26
    NUMERIC=27
    CHAR=28
    VARCHAR=29
    TEXT=30
    DATE=31
    TIME=32
    DATETIME=33
    TIMESTAMP=34
    BOOLEAN=35
    BIT=36
    MULT=37
    IGUAL=38
    MENOR=39
    MAYOR=40
    MENORIGUAL=41
    MAYORIGUAL=42
    DIFERENTE=43
    PARIZQ=44
    PARDER=45
    COMA=46
    PUNTOYCOMA=47
    DECIMAL_NUM=48
    ENTERO=49
    CADENA=50
    ID=51
    COMENTARIO=52
    COMENTARIO_BLOQUE=53
    WS=54
    ERROR=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ExprParser.SentenciaContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_inicio




    def inicio(self):

        localctx = ExprParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1002) != 0):
                self.state = 40
                self.sentencia()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def crearBaseDatos(self):
            return self.getTypedRuleContext(ExprParser.CrearBaseDatosContext,0)


        def usarBaseDatos(self):
            return self.getTypedRuleContext(ExprParser.UsarBaseDatosContext,0)


        def crearTabla(self):
            return self.getTypedRuleContext(ExprParser.CrearTablaContext,0)


        def insertar(self):
            return self.getTypedRuleContext(ExprParser.InsertarContext,0)


        def seleccionar(self):
            return self.getTypedRuleContext(ExprParser.SeleccionarContext,0)


        def actualizar(self):
            return self.getTypedRuleContext(ExprParser.ActualizarContext,0)


        def eliminar(self):
            return self.getTypedRuleContext(ExprParser.EliminarContext,0)


        def eliminarTabla(self):
            return self.getTypedRuleContext(ExprParser.EliminarTablaContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_sentencia




    def sentencia(self):

        localctx = ExprParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.crearBaseDatos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.usarBaseDatos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.crearTabla()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.insertar()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.seleccionar()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.actualizar()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.eliminar()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.eliminarTabla()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CrearBaseDatosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(ExprParser.CREATE, 0)

        def DATABASE(self):
            return self.getToken(ExprParser.DATABASE, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_crearBaseDatos




    def crearBaseDatos(self):

        localctx = ExprParser.CrearBaseDatosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_crearBaseDatos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ExprParser.CREATE)
            self.state = 59
            self.match(ExprParser.DATABASE)
            self.state = 60
            self.match(ExprParser.ID)
            self.state = 61
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsarBaseDatosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(ExprParser.USE, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_usarBaseDatos




    def usarBaseDatos(self):

        localctx = ExprParser.UsarBaseDatosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_usarBaseDatos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ExprParser.USE)
            self.state = 64
            self.match(ExprParser.ID)
            self.state = 65
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EliminarTablaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(ExprParser.DROP, 0)

        def TABLE(self):
            return self.getToken(ExprParser.TABLE, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_eliminarTabla




    def eliminarTabla(self):

        localctx = ExprParser.EliminarTablaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_eliminarTabla)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(ExprParser.DROP)
            self.state = 68
            self.match(ExprParser.TABLE)
            self.state = 69
            self.match(ExprParser.ID)
            self.state = 70
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CrearTablaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(ExprParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(ExprParser.TABLE, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PARIZQ(self):
            return self.getToken(ExprParser.PARIZQ, 0)

        def columna(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ColumnaContext)
            else:
                return self.getTypedRuleContext(ExprParser.ColumnaContext,i)


        def PARDER(self):
            return self.getToken(ExprParser.PARDER, 0)

        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_crearTabla




    def crearTabla(self):

        localctx = ExprParser.CrearTablaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_crearTabla)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(ExprParser.CREATE)
            self.state = 73
            self.match(ExprParser.TABLE)
            self.state = 74
            self.match(ExprParser.ID)
            self.state = 75
            self.match(ExprParser.PARIZQ)
            self.state = 76
            self.columna()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 77
                self.match(ExprParser.COMA)
                self.state = 78
                self.columna()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(ExprParser.PARDER)
            self.state = 85
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def tipoDato(self):
            return self.getTypedRuleContext(ExprParser.TipoDatoContext,0)


        def restricciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.RestriccionesContext)
            else:
                return self.getTypedRuleContext(ExprParser.RestriccionesContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_columna




    def columna(self):

        localctx = ExprParser.ColumnaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columna)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(ExprParser.ID)
            self.state = 88
            self.tipoDato()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 688128) != 0):
                self.state = 89
                self.restricciones()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoDatoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def INTEGER(self):
            return self.getToken(ExprParser.INTEGER, 0)

        def BIGINT(self):
            return self.getToken(ExprParser.BIGINT, 0)

        def SMALLINT(self):
            return self.getToken(ExprParser.SMALLINT, 0)

        def FLOAT(self):
            return self.getToken(ExprParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(ExprParser.DOUBLE, 0)

        def DECIMAL(self):
            return self.getToken(ExprParser.DECIMAL, 0)

        def NUMERIC(self):
            return self.getToken(ExprParser.NUMERIC, 0)

        def CHAR(self):
            return self.getToken(ExprParser.CHAR, 0)

        def PARIZQ(self):
            return self.getToken(ExprParser.PARIZQ, 0)

        def ENTERO(self):
            return self.getToken(ExprParser.ENTERO, 0)

        def PARDER(self):
            return self.getToken(ExprParser.PARDER, 0)

        def VARCHAR(self):
            return self.getToken(ExprParser.VARCHAR, 0)

        def TEXT(self):
            return self.getToken(ExprParser.TEXT, 0)

        def DATE(self):
            return self.getToken(ExprParser.DATE, 0)

        def TIME(self):
            return self.getToken(ExprParser.TIME, 0)

        def DATETIME(self):
            return self.getToken(ExprParser.DATETIME, 0)

        def TIMESTAMP(self):
            return self.getToken(ExprParser.TIMESTAMP, 0)

        def BOOLEAN(self):
            return self.getToken(ExprParser.BOOLEAN, 0)

        def BIT(self):
            return self.getToken(ExprParser.BIT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_tipoDato




    def tipoDato(self):

        localctx = ExprParser.TipoDatoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipoDato)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(ExprParser.INT)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(ExprParser.INTEGER)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(ExprParser.BIGINT)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(ExprParser.SMALLINT)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.match(ExprParser.FLOAT)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.match(ExprParser.DOUBLE)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 7)
                self.state = 101
                self.match(ExprParser.DECIMAL)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 8)
                self.state = 102
                self.match(ExprParser.NUMERIC)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 9)
                self.state = 103
                self.match(ExprParser.CHAR)
                self.state = 104
                self.match(ExprParser.PARIZQ)
                self.state = 105
                self.match(ExprParser.ENTERO)
                self.state = 106
                self.match(ExprParser.PARDER)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 10)
                self.state = 107
                self.match(ExprParser.VARCHAR)
                self.state = 108
                self.match(ExprParser.PARIZQ)
                self.state = 109
                self.match(ExprParser.ENTERO)
                self.state = 110
                self.match(ExprParser.PARDER)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 11)
                self.state = 111
                self.match(ExprParser.TEXT)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 12)
                self.state = 112
                self.match(ExprParser.DATE)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 13)
                self.state = 113
                self.match(ExprParser.TIME)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 14)
                self.state = 114
                self.match(ExprParser.DATETIME)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 15)
                self.state = 115
                self.match(ExprParser.TIMESTAMP)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 16)
                self.state = 116
                self.match(ExprParser.BOOLEAN)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 17)
                self.state = 117
                self.match(ExprParser.BIT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestriccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMARY(self):
            return self.getToken(ExprParser.PRIMARY, 0)

        def KEY(self):
            return self.getToken(ExprParser.KEY, 0)

        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def NULL(self):
            return self.getToken(ExprParser.NULL, 0)

        def UNIQUE(self):
            return self.getToken(ExprParser.UNIQUE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_restricciones




    def restricciones(self):

        localctx = ExprParser.RestriccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_restricciones)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(ExprParser.PRIMARY)
                self.state = 121
                self.match(ExprParser.KEY)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(ExprParser.NOT)
                self.state = 123
                self.match(ExprParser.NULL)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(ExprParser.UNIQUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(ExprParser.INSERT, 0)

        def INTO(self):
            return self.getToken(ExprParser.INTO, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PARIZQ(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.PARIZQ)
            else:
                return self.getToken(ExprParser.PARIZQ, i)

        def listaColumnas(self):
            return self.getTypedRuleContext(ExprParser.ListaColumnasContext,0)


        def PARDER(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.PARDER)
            else:
                return self.getToken(ExprParser.PARDER, i)

        def VALUES(self):
            return self.getToken(ExprParser.VALUES, 0)

        def listaValores(self):
            return self.getTypedRuleContext(ExprParser.ListaValoresContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_insertar




    def insertar(self):

        localctx = ExprParser.InsertarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_insertar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(ExprParser.INSERT)
            self.state = 128
            self.match(ExprParser.INTO)
            self.state = 129
            self.match(ExprParser.ID)
            self.state = 130
            self.match(ExprParser.PARIZQ)
            self.state = 131
            self.listaColumnas()
            self.state = 132
            self.match(ExprParser.PARDER)
            self.state = 133
            self.match(ExprParser.VALUES)
            self.state = 134
            self.match(ExprParser.PARIZQ)
            self.state = 135
            self.listaValores()
            self.state = 136
            self.match(ExprParser.PARDER)
            self.state = 137
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaColumnasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_listaColumnas




    def listaColumnas(self):

        localctx = ExprParser.ListaColumnasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listaColumnas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(ExprParser.ID)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 140
                self.match(ExprParser.COMA)
                self.state = 141
                self.match(ExprParser.ID)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaValoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ValorContext)
            else:
                return self.getTypedRuleContext(ExprParser.ValorContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_listaValores




    def listaValores(self):

        localctx = ExprParser.ListaValoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listaValores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.valor()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 148
                self.match(ExprParser.COMA)
                self.state = 149
                self.valor()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeleccionarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(ExprParser.SELECT, 0)

        def columnas(self):
            return self.getTypedRuleContext(ExprParser.ColumnasContext,0)


        def FROM(self):
            return self.getToken(ExprParser.FROM, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PUNTOYCOMA(self):
            return self.getToken(ExprParser.PUNTOYCOMA, 0)

        def WHERE(self):
            return self.getToken(ExprParser.WHERE, 0)

        def condicion(self):
            return self.getTypedRuleContext(ExprParser.CondicionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_seleccionar




    def seleccionar(self):

        localctx = ExprParser.SeleccionarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_seleccionar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ExprParser.SELECT)
            self.state = 156
            self.columnas()
            self.state = 157
            self.match(ExprParser.FROM)
            self.state = 158
            self.match(ExprParser.ID)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 159
                self.match(ExprParser.WHERE)
                self.state = 160
                self.condicion()


            self.state = 163
            self.match(ExprParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(ExprParser.MULT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)
